# cpp2024

./: .gitignore  CMakeLists.txt  main.cpp  sum
midhw/: asdfsdf.cpp  hw1
week1/: bsearch.cpp  matrix.c  max.c  max_bsearch.cpp  sum.cpp
week10/: ex1.cpp
week2/: assignment1.cpp  q1.cpp  q2.cpp  string_pointer.cpp
week3/: binary_io_ex.cpp  text_io_ex.cpp  week3_ex3.cpp  week3_hw1.c
week4/: ex1.cpp  hw1.cpp
week5/: ex1.cpp  hw1.cpp
week6/: ex1.cpp  ex2.cpp  ex3.cpp  hw1.cpp
week7/: ex1.cpp  hw1.cpp
week8/: ex1.cpp  ex2.cpp  test1.cpp
week9/: geom.cpp
