cmake_minimum_required(VERSION 3.26)
project(cpp2024)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp2024 main.cpp)
add_executable(bsearch week1/bsearch.cpp)
add_executable(max week1/max.c)
add_executable(week1_work week1/max_bsearch.cpp)
add_executable(as1 week2/assignment1.cpp)
add_executable(week2_ex1 week2/string_pointer.cpp)
add_executable(week2_q1 week2/q1.cpp)
add_executable(week2_q2 week2/q2.cpp)
add_executable(week3_ex1 week3/text_io_ex.cpp)
add_executable(week3_ex2 week3/binary_io_ex.cpp)
add_executable(week3_ex3 week3/week3_ex3.cpp)
add_executable(week3_hw1 week3/week3_hw1.c)
add_executable(week4_ex1 week4/ex1.cpp)
add_executable(week4_hw1 week4/hw1.cpp)
add_executable(week5_ex1 week5/ex1.cpp)
add_executable(week5_hw1 week5/hw1.cpp)
add_executable(week6_ex1 week6/ex1.cpp)
add_executable(week6_ex2 week6/ex2.cpp)
add_executable(week6_ex3 week6/ex3.cpp)
add_executable(week6_hw1 week6/hw1.cpp)
add_executable(week7_ex1 week7/ex1.cpp)
add_executable(week7_hw1 week7/hw1.cpp)
add_executable(mid_hw1 midhw/asdfsdf.cpp)
add_executable(week8_ex1 week8/ex1.cpp)
add_executable(week8_ex2 week8/ex2.cpp)
add_executable(week8_q1 week8/test1.cpp)
add_executable(week9_ex1 week9/geom.cpp)
add_executable(week10_ex1 week10/ex1.cpp)
